Po 901 dto validation approach (#881)
* controller advice to schema validate

* PO-901: Implement and compare DTO vs runtime JSON schema validation

* PO-901: Align SQL test data account_type to 'Fines'

* PO-901: Add raw JSON request builder for AddDraftAccountRequestDto to support schema validation

* PO-901: Add raw JSON request builder for AddDraftAccountRequestDto to support schema validation

* PO-901: Fix functional test to send raw JSON strings for account and timeline_data

* PO-901: Fix payment_terms block to include required fields

* PO-901- Update functional test feature files: set account_status to 'Submitted' to resolve 400 errors

* PO-901: Fix payload structure and ID types for draft account tests

* PO-901: Refactor step defs and update PO-832 payload to support submitted_by filtering and schema validation

* Convert bu id to long to match schema
Change 400 test to actual fail schema validation

* Fix Checkstyle violation: split long line in DraftAccountGetSteps.java

* Refactor: use helper methods, update SQL path, and simplify validation logic

- Added dataExists() and addIntToJsonObject() to BaseStepDef
- Replaced repeated validation logic in DraftAccountPatchSteps
- Updated @Sql path to use insertData

* - Moved SQL file to match @Sql path in integration test
- Fixed Checkstyle whitespace issues in DraftAccountPatchSteps

* - Moved SQL file to match @Sql path in integration test

* Trigger Jenkins rebuild

* Fix: place SQL file in integrationTest/resources to match test classpath

* Refactor step defs to use BaseStepDef helpers and remove inline null checks

* Remove misplaced application-functional.yaml from test resources

* - Fix PATCH timeline_data to use correct keys: username and status

- Add missing version field to PATCH test payloads to pass schema validation

- Add minLength constraint to submitted_by_name in replaceDraftAccountRequest schema

---------

Co-authored-by: DeclanClarkeCGI <142809814+DeclanClarkeCGI@users.noreply.github.